# samarium

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  .tokeignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.md  LICENSE.txt  README.md  bootstrap.py  build.sh  conanfile.py  coverage.html  coverage.xml  hashgrid.md  run.bat  run.ps1  run.py  samarium.cpp  sonar-project.properties  temp-try.txt
.github/: CODE_OF_CONDUCT.md  docs.yml
.history/: README_20220305181506.md  README_20220308124903.md  README_20220308124905.md  README_20220308124915.md
benchmarks/: CMakeLists.txt  Vec2.cpp  Vector2.cpp  image_export.cpp  particles.cpp  random.cpp  vector_math.cpp
cmake/: Catch.cmake  CatchAddTests.cmake  ccache.cmake  check_project_structure.cmake  clang.profile  clang_Debug.profile  clang_Release.profile  compiler_options.cmake  compiler_warnings.cmake  conan.cmake  conan_install.cmake  coverage.cmake  docs.cmake  find_deps.cmake  gtest_setup.cmake  include_what_you_use.cmake  modern_project_structure.cmake  run_after_build.cmake  setup_catch2.cmake  ubsan.cmake  valgrind.cmake
dev/: build.sh  colors.css  msvc-analysis.yml
docs/: .gitignore  .template.md  404.html  Doxyfile  Doxyfile.cfg  Examples.md  README.md  Vector2.md  _config.yml  build-status.rst  build_status.rst  building.md  changelog.rst  code_structure.rst  conf.py  config.toml  development.rst  doxygen-awesome.css  examples.md  includes.rst  index.markdown  index.rst  installation.rst  license.md  (+5 more)
examples/: CMakeLists.txt  README.md  basic.cpp  flow_field_noise.cpp  fluid.cpp  fourier_series.cpp  gas_maxwell_boltzmann_distribution.cpp  gravity.cpp  gravity1.cpp  gravity_working_comments.cpp  hello_world.cpp  hilbert_curve.cpp  mandelbrot.cpp  poisson_disk_sampling.cpp  prime_spiral.cpp  second_order_dynamics.cpp  softbody.cpp  springy_pendulum.cpp
examples/fourier/: fourier.cpp  fourier.hpp  india_verts.hpp  parse_obj.hpp
examples/graphics/: flow_field_noise.cpp  fourier_series.cpp  hilbert_curve.cpp  mandelbrot.cpp  parametric_path.cpp  plot.cpp  poisson_disc_sampling.cpp  poisson_disk_sampling.cpp  prime_spiral.cpp  second_order_dynamics.cpp  transparent_window.cpp  zoom.cpp
examples/physics/: gas_maxwell_boltzmann_distribution.cpp  particle_collisions.cpp  particle_life.cpp  softbody.cpp  springy_pendulum.cpp
examples/usage/: input.cpp
src/: CMakeLists.txt  README.md
src/samarium/: App.cpp  App.hpp  CMakeLists.txt  Color.hpp  Colors.hpp  DynArray.hpp  Extents.hpp  Image.hpp  README.md  Rect.hpp  Renderer.cpp  Renderer.hpp  Shapes.hpp  ThreadPool.hpp  Transform.hpp  Vector2.hpp  Window.hpp  anim.hpp  app.hpp  concepts.hpp  core.hpp  file.cpp  file.hpp  geometry.hpp  gl.hpp  graphics.hpp  gui.hpp  interp.hpp  lite.hpp  math.hpp  physics.hpp  print.hpp  random.hpp  samarium.hpp  shapes.hpp  turtle.hpp  types.hpp  util.hpp
src/samarium/anim/: Handler.cpp  Handler.hpp
src/samarium/app/: App.cpp  App.hpp
src/samarium/core/: DynArray.hpp  ThreadPool.cpp  ThreadPool.hpp  concepts.hpp  inline.hpp  types.hpp  version.hpp
src/samarium/cuda/: HashGrid.cu  HashGrid.hpp  HostDevVec.cu  HostDevVec.cuh  HostDevVec.hpp  cuda.hpp  forces.cu  hello.cu  hello.hpp  info.cu  info.hpp  thrust_benchmark.cu
src/samarium/geometry/: Mesh.hpp
src/samarium/gl/: Buffer.hpp  Context.cpp  Context.hpp  Framebuffer.cpp  Framebuffer.hpp  Instancer.hpp  Shader.cpp  Shader.hpp  Sync.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  Vertex.hpp  Window.cpp  Window.hpp  draw.cpp  draw.hpp  gl.cpp  gl.hpp
src/samarium/gl/draw/: background.hpp  grid.hpp  poly.hpp  shapes.hpp  trail.hpp  vertices.hpp
src/samarium/gl/shaders/: Pos.frag.glsl  Pos.vert.glsl  PosColor.frag.glsl  PosColor.vert.glsl  PosColorTex.frag.glsl  PosColorTex.vert.glsl  PosInstance.vert.glsl  PosTex.frag.glsl  PosTex.vert.glsl  particles.vert.glsl  polyline.vert.glsl  text.frag.glsl
src/samarium/graphics/: Color.hpp  Gradient.hpp  Grid.hpp  Image.hpp  Plot.hpp  Renderer.cpp  Renderer.hpp  Trail.cpp  Trail.hpp  colors.hpp  gradients.hpp
src/samarium/gui/: Keyboard.cpp  Keyboard.hpp  Keymap.cpp  Keymap.hpp  Mouse.cpp  Mouse.hpp  MovablePoint.hpp  Window.cpp  Window.hpp  WindowHandle.hpp  keyboard.cpp  keyboard.hpp  sfml.hpp
src/samarium/math/: BoundingBox.hpp  Box2.hpp  Dual.hpp  Extents.hpp  Polynomial.hpp  Range.hpp  Rect.hpp  SecondOrderDynamics.hpp  Transform.hpp  Vec2.hpp  Vector2.hpp  complex.hpp  geometry.hpp  interp.hpp  loop.hpp  math.hpp  range.hpp  sample.hpp  shapes.hpp  stats.hpp  vector_math.hpp
src/samarium/physics/: Car.cpp  Dual.hpp  Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  ParticleSystemInstanced.hpp  RigidBody.cpp  RigidBody.hpp  Spring.cpp  Spring.hpp  collision.cpp  collision.hpp
src/samarium/physics/fluid/: Fluid.cpp  Fluid.hpp
src/samarium/physics/gpu/: Particle.comp.glsl  ParticleSystem.hpp  update.comp.glsl  version.comp.glsl
src/samarium/scene/: Scene.hpp
src/samarium/util/: Benchmark.cpp  Benchmark.hpp  Error.hpp  Expected.hpp  FunctionRef.hpp  Grid.hpp  Grid2.hpp  HashGrid.hpp  Map.hpp  PerlinNoise.cpp  PerlinNoise.hpp  RandomGenerator.cpp  RandomGenerator.hpp  Result.hpp  SmallVector.hpp  SourceLocation.hpp  StaticVector.hpp  Stopwatch.cpp  Stopwatch.hpp  ThreadPool.hpp  byte_size.hpp  date.hpp  expected.hpp  file.cpp  file.hpp  format.hpp  noise.cpp  noise.hpp  ostream.cpp  ostream.hpp  poisson_disc.cpp  poisson_disc.hpp  print.hpp  random.hpp  replace_substr.hpp  run.hpp  terminal_dims.hpp  unordered.hpp  unordered_dense.hpp  util.cpp  (+1 more)
src/samarium/util/call_thunk/: call_thunk.cpp  call_thunk.hpp
src/samarium/util/fpng/: fpng.cpp  fpng.h  fpng.hpp
test/: CMakeLists.txt  app.cpp  bg_gradient.cpp  dev.cpp  dev_cuda_forces.cpp  dev_cuda_ps_benchmark.cpp  dev_cuda_ps_grid_color.cpp  dev_cuda_test_particles.cpp  dev_instancing.cpp  main.cpp  samarium_main.cpp  samarium_tests.cpp  test.cpp  testImage.hpp  testmath.hpp  turtle.hpp  ut.hpp
test/tests/: CMakeLists.txt  Vec2.cpp  Vector2.cpp  Vector2.hpp  concepts.cpp  concepts.hpp
(+112 files in other folders)
